# epilepsy-ml

./: BEGINNER_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PIPELINE_GUIDE.md  README.md  epilepsy_ml_pipeline_demo.ipynb  publications.md  pyproject.toml  quickstart.py  requirements.txt  test_pipeline.py
experiments/: run_classical.py  run_pipeline.py
notebooks/: ml_pipeline.ipynb
papers/: README.md
src/data/: loader.py
src/evaluation/: metrics.py
src/features/: engineer.py  extractor.py
src/models/: classical.py  deep.py
src/preprocessing/: eeg_filters.py  pipeline.py
src/training/: train.py
src/utils/: seed.py
src/visualization/: plots.py
tests/: __init__.py  test_data_loader.py  test_models.py  test_preprocessing.py
