[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epilepsy-ml-pipeline"
version = "1.0.0"
description = "Epilepsy ML pipeline"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Saniya Vaish", email = "3017061@gmail.com"},
]
keywords = ["machine-learning", "AI", "computational-biology", "pytorch", "scikit-learn"]
classifiers = [
    "Development Status :: 0.1 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: AI",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "matplotlib>=3.4",
    "seaborn>=0.11",
    "plotly>=5.0",
    "ipywidgets>=7.6",
    "notebook>=6.0",
    "torch>=1.9",
]

[project.urls]
Homepage = "https://github.com/3017061/epilepsy-ml-pipeline"
Documentation = "https://github.com/3017061/epilepsy-ml-pipeline#readme"
Issues = "https://github.com/3017061/epilepsy-ml-pipeline/issues"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
